--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/images/fav-sw.png" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="theme-color" content="#000000" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content=" SmallWorld helps entrepreneurs test, refine, design startup model, build, and launch fast with small capital by providing a share workspace and a supporting community of like-mined people."
+    />
+    <meta
+      name="keywords"
+      content="startup, Smallworld, Cambodia , business, Cambodia starups, technology in cambodia, Startup in Cambodia"
+    />
     <link
       rel="stylesheet"
       type="text/css"
       href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"
     />
     <link rel="stylesheet" href="css/site.css" />
-    <title>React App</title>
+    <title>SmallWorld Venture</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
