semi final content edition

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     <title>SmallWorld Venture</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>SmallWorld Venture Webapp</noscript>
     <div id="root"></div>
   </body>
 </html>
