--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,9 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"
     />
     <link rel="stylesheet" href="css/site.css" />
-    <title>SmallWorld Venture</title>
+    <title>
+      SmallWorld Venture | Homegrown startup community based in Phnom Penh
+    </title>
   </head>
   <body>
     <noscript>SmallWorld Venture Webapp</noscript>
