--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,7 +22,7 @@
       type="text/css"
       href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"
     />
-    <link rel="stylesheet" href="css/site.css" />
+    <!-- <link rel="stylesheet" href="css/site.css" /> -->
     <title>
       SmallWorld Venture | Homegrown startup community based in Phnom Penh
     </title>
